adjust grid item width and all container padding-right for max 640-800px plus change masonry event to fix overlap

--- a/_sass/_4-grid.scss
+++ b/_sass/_4-grid.scss
@@ -13,6 +13,9 @@
 
 .item, .item img {
 	width: 300px;
+	@media (max-width: 640px) {
+		width: 96%
+	}
 }
 
 .item {
