--- a/_sass/_5-page.scss
+++ b/_sass/_5-page.scss
@@ -21,7 +21,7 @@ section.blog,
 section.post {
   padding: 0 5em 0 1em;
   margin: 10em auto;
-  width: 96%;
+  width: 93%;
   max-width: 800px;
   h1 {
     text-align: left;
